[package]
name = "etcd-client-py"
version = "0.3.0"
edition = "2021"
authors = ["Lablup Inc."]
readme = "./README.md"

[lib]
name = "etcd_client"
crate-type = ["cdylib"]

[dependencies]
etcd-client = "0.14.1"
pyo3 = { version = "0.23.4", features = ["extension-module", "multiple-pymethods"] }
pyo3-async-runtimes = { version = "0.23", features = ["attributes", "tokio-runtime"] }
scopeguard = "1.2.0"
tokio = { version = "1.43.0", features = ["sync"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
