[package]
name = "etcd-client-py"
version = "0.4.0"
edition = "2021"
authors = ["Lablup Inc."]
readme = "./README.md"

[lib]
name = "etcd_client"
crate-type = ["cdylib"]

[dependencies]
etcd-client = "0.16.1"
pyo3 = { version = "0.25.1", features = ["extension-module", "multiple-pymethods"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["attributes", "tokio-runtime"] }
scopeguard = "1.2.0"
tokio = { version = "1.46.1", features = ["sync"] }
tokio-stream = "0.1.17"
tonic = "0.13.1"
