[project]
name = "etcd-client-py"
description = "Yet another etcd-client API binding based on the Rust's etcd-client package"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
keywords = ["etcd", "binding", "rust", "etcd-client"]
authors = [
  {name = "Sanghyeon Seo"},
  {email = "seosh@lablup.com"},
  {name = "Joongi Kim"},
  {email = "joongi@lablup.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
homepage = "https://github.com/lablup/etcd-client-py"
repository = "https://github.com/lablup/etcd-client-py"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
