[project]
name = "etcd-client-py"
dynamic = ["version"]
description = "Yet another etcd-client API binding based on the Rust's etcd-client package"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
keywords = ["etcd", "binding", "rust", "etcd-client"]
authors = [
  {name = "Sanghyeon Seo"},
  {email = "seosh@lablup.com"},
  {name = "Joongi Kim"},
  {email = "joongi@lablup.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
homepage = "https://github.com/lablup/etcd-client-py"
repository = "https://github.com/lablup/etcd-client-py"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.5",
    "mypy>=1.13.0",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# === Tool Configuration ===

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["*.pyi"]

[tool.ruff.lint]
ignore = [
    "E501",   # Line too long (formatter handles)
]

[tool.ruff.lint.isort]
known-first-party = ["etcd_client", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = false
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "trafaret.*",
    "testcontainers.*",
]
ignore_missing_imports = true
