[project]
name = "etcd-client-py"
dynamic = ["version"]
description = "Yet another etcd-client API binding based on the Rust's etcd-client package"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
keywords = ["etcd", "binding", "rust", "etcd-client"]
authors = [
  {name = "Sanghyeon Seo"},
  {email = "seosh@lablup.com"},
  {name = "Joongi Kim"},
  {email = "joongi@lablup.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "maturin>=1.11.2",
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3.0,<2",
  "trafaret>=2.1,<3",
  "testcontainers>=4.13.3,<5",
]

[project.urls]
homepage = "https://github.com/lablup/etcd-client-py"
repository = "https://github.com/lablup/etcd-client-py"

[project.optional-dependencies]
dev = [
    "ruff>=0.14.10",
    "mypy>=1.19.1",
]

[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

# === Tool Configuration ===

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["*.pyi"]
preview = true

[tool.ruff.lint]
preview = true
ignore = [
    "E501",   # Line too long (formatter handles)
]

[tool.ruff.lint.isort]
known-first-party = ["etcd_client", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = false
show_error_codes = true
show_column_numbers = true
pretty = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "trafaret.*",
    "testcontainers.*",
    "pytest.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
no_implicit_optional = false
disable_error_code = ["union-attr"]
